# Shang

./: .gitattributes  CMakeLists.txt  DataPathPromotion.cpp  DeadMemOpElimination.cpp  FixMachineCode.cpp  FixTerminators.cpp  MemOpsFusing.cpp  SIRRTLCodeGen_origin.cpp  ScriptingPass.cpp  VFInfo.cpp  VISelDAGToDAG.cpp  VInstrInfo.cpp  VInstrInfo.td  VRegisterInfo.cpp  VRegisterInfo.td  VSelectionDAGInfo.cpp  VTargetMachine.cpp  confuse_logic_synthesis.patch  fpl_expr.patch  revisions.json  run_mavg_with_constraint.patch  shang.cpp
external_libs/: CMakeLists.txt
external_libs/LuaBridge/: mit-license.html
external_libs/abc/: CMakeLists.txt  demo.c  generic.h  template.c
external_libs/abc/python/: abc.sh  abcpy_test.py  module.make  package.py  pyabc.i  pyabc_split.py  reachx_cmd.py  redirect.py  setup.py
external_libs/lp_solve/: CMakeLists.txt  configure
external_libs/lp_solve/lpsolve55/: lpsolve.rc
external_libs/lpsolve/: CMakeLists.txt  GNU LESSER GENERAL PUBLIC LICENSE.htm
external_libs/luabind/: CMakeLists.txt
lib/BLO/: BitManipulate.cpp  BitlevelOpt.cpp  BitlevelOpt.h  CMakeLists.txt  CarryChainOpt.cpp  DemandedOpt.cpp  LUTMapping.cpp
lib/HLS/: CMakeLists.txt  Dataflow.cpp  DelayMatrix.cpp  DelayMatrix.h  ExternalTimingAnalysis.cpp  STGDistances.cpp  SelectorPipelining.cpp  SelectorSynthesis.cpp  TimingAnalysis.cpp  TimingEstimator.cpp  TimingEstimator.h  TimingNetlist.cpp  TimingNetlist.h  TimingScriptGen.cpp
lib/HLS/Binding/: CMakeLists.txt  CompGraph.cpp  CompGraph.h  PreSchedBinding.cpp  PreSchedBinding.h  RegisterSharing.cpp  SeqLiveVariables.cpp  SeqLiveVariables.h
lib/HLS/Scheduling/: CFGParallelizer.cpp  CMakeLists.txt  ControlHazardResolver.cpp  CrossBBDepVerifier.cpp  GlobalDepBuilder.cpp  InnerIterativeEngine.cpp  IterativeSchedulingDriver.cpp  LagSDCSolver.cpp  LagSDCSolver.h  SDCScheduler.cpp  SDCScheduler.h  ScheduleDOT.h  ScheduleEmitter.cpp  SchedulerBase.cpp  SchedulerBase.h  VASTScheduling.cpp  VASTScheduling.h
lib/HighlevelSynthesis/: AlwaysSpeculate.cpp  BBLandingSlots.cpp  BBLandingSlots.h  CFGFoldingAnalysis.cpp  CFGParallelizer.cpp  CMakeLists.txt  CombPathDelayAnalysis.cpp  CompGraph.cpp  CompGraph.h  CrossBBChainFixer.cpp  CrossBBDepVerifier.cpp  Dataflow.cpp  Dataflow.h  ExternalTimingAnalysis.cpp  ExternalTimingAnalysis.h  GlobalDepBuilder.cpp  InnerIterativeEngine.cpp  IterativeScheduling.cpp  IterativeSchedulingBinding.cpp  LinearOrderBuilder.cpp  LowerPseudoPHIs.cpp  OverlappedSlots.cpp  OverlappedSlots.h  PreSchedBinding.cpp  PreSchedBinding.h  RegisterFolding.cpp  RegisterSharing.cpp  SDCScheduler.cpp  SDCScheduler.h  STGDistances.cpp  STGDistances.h  STGShortestPath.cpp  STGShortestPath.h  ScheduleDOT.h  ScheduleEmitter.cpp  SchedulerBase.cpp  SchedulerBase.h  SelectorPipelining.cpp  SelectorSynthesis.cpp  SeqLiveVariables.cpp  (+11 more)
lib/HighlevelSynthesis/Binding/: CompGraph.cpp  CompGraph.h  PreSchedBinding.cpp  PreSchedBinding.h  RegisterSharing.cpp  SeqLiveVariables.cpp  SeqLiveVariables.h
lib/HighlevelSynthesis/Scheduling/: CMakeLists.txt  ControlHazardResolver.cpp  CrossBBDepVerifier.cpp  GlobalDepBuilder.cpp  HeuristicalILPDriver.cpp  InnerIterativeEngine.cpp  IterativeSchedulingDriver.cpp  LagSDCDriver.cpp  LagSDCSolver.cpp  LagSDCSolver.h  SDCScheduler.cpp  SDCScheduler.h  (+5 more)
lib/SIR/: CMakeLists.txt  DFGAnalysis.cpp  DFGBuild.cpp  DFGOpt.cpp  SIR.cpp  SIRAddMulChain.cpp  SIRAllocation.cpp  SIRBitMask.cpp  SIRBitMaskAnalysis.cpp  SIRBuild.cpp  SIRDatapathBLO.cpp  SIRFSMSynthesis.cpp  SIRFindCriticalPath.cpp  SIRIMSScheduler.cpp  SIRListScheduler.cpp  SIRLowerIntrinsic.cpp  SIRMOAOpt.cpp  SIRMemoryBank.cpp  SIRPass.cpp  SIRRTLCodeGen.cpp  SIRRegisterSynthesis.cpp  SIRSDCScheduler.cpp  SIRSTGDistance.cpp  SIRSchedGraph.cpp  SIRSchedulerBase.cpp  SIRScheduling.cpp  SIRSelectorSynthesis.cpp  SIRSubModuleBase.cpp  SIRTimingAnalysis.cpp  SIRTimingScriptGen.cpp
lib/Scripting/: BindingTraits.h  CMakeLists.txt  FUInfo.cpp  LuaI.cpp  LuaScript.cpp  LuaScript.h  VASTLuaBases.cpp  VerilogAST.cpp  luapp.inc
lib/VAST/: Allocation.cpp  Allocation.h  BasicBlockTopOrder.cpp  CMakeLists.txt  ControlLogicSynthesis.cpp  DatapathContainer.cpp  DatapathNamer.cpp  DesignMetrics.cpp  IR2Datapath.cpp  IR2Datapath.h  LUTMapping.cpp  LangSteam.h  LowerDiv.cpp  MemoryPartition.cpp  MinimalDatapathContext.cpp  MinimalDatapathContext.h  OptimizePHINodes.cpp  RTLCodeGen.cpp  ResourceAllocation.cpp  ScheduleEmitter.cpp  ScriptingPass.cpp  ScriptingSupport.cpp  SeqSelectorSynthesis.cpp  SimpleBlockRAMAllocation.cpp  Strash.cpp  Strash.h  VASTBitMask.cpp  VASTControlpath.cpp  VASTCtrlRgn.cpp  VASTExpr.cpp  VASTExprBuilder.cpp  VASTExprBuilder.h  VASTExprOptAddMult.cpp  VASTExprOptAnd.cpp  VASTExprOptCmp.cpp  VASTMemoryBank.cpp  VASTMemoryPort.cpp  VASTMisc.cpp  VASTModule.cpp  VASTModulePass.cpp  (+6 more)
testsuite/: 5CEFA7F23C6.lua  ASIC.lua  AddModules.lua  Altera4LUTFUs.lua  AlteraCommon.lua  BramGlobVar.lua  CMakeLists.txt  EP2C70F896C6.lua  EP4CE75F29C6-F.lua  EP4CE75F29C6.lua  EP4S40G2F40C2ES1.lua  EP4SGX530KH40C2.lua  EP4SGX70HF35C2.lua  ExpectFails  FuncDefine.lua  InterfaceGen.lua  ModelSimGen.lua  SCIfCodegen.lua  StatsCycles.py  StatsSynthesis.py  StatsSynthesis_sqlite.py  XC7K70TFBV676.lua  altera_sdc_generator.py  basic_config.json.in  booth_mul_codegen.py  common_config.lua  common_config.lua.in  compressor_codegen.py  cosimulation_config.lua.in  extract_timing.tcl  hybrid_sim.sge.in  hybrid_tree_codegen.py  quartus_compile.tcl  report_json_data.tcl  setup_legup_symain.tcl.in  setup_proj_symain.tcl.in  sir_mem.bc  test_config.lua.in  test_config_main.lua.in  verilog_synthesis_altera.tcl.in
testsuite/Loops/: loop_memop_fusing_mem_move_8bit_epilog.cpp
testsuite/SimpleTest/: cfg_one_slot_loop.cpp  cfg_switch.cpp  fu_bram.cpp  op_and_by_constant.cpp  op_and_with_bit_catt.cpp  op_ashr.cpp  op_lshr.cpp  op_sdiv.cpp  op_sdiv_const.cpp  op_sdiv_const_power_of_2.cpp  op_srem_const.cpp  op_udiv.cpp  op_udiv_const.cpp  op_udiv_const_power_of_2.cpp  op_urem_const.cpp
testsuite/benchmark/: CMakeLists.txt
testsuite/regresstests/: CMakeLists.txt
(+1459 files in other folders)
